shaarli (0.0.41~beta~dfsg2-3) unstable; urgency=low

  * Solve various Lintian warnings and info:
    - field-name-typo-in-dep5-copyright
    - vcs-field-not-canonical
    - unused-license-paragraph-in-dep5-copyright

 -- Emilien Klein <emilien+debian@klein.st>  Mon, 07 Oct 2013 22:12:34 +0200

shaarli (0.0.41~beta~dfsg2-2) unstable; urgency=low

  * improved the file d/copyright, thanks to Luca Flavigna's remarks

 -- Georges Khaznadar <georgesk@debian.org>  Sat, 01 Jun 2013 16:53:09 +0200

shaarli (0.0.41~beta~dfsg2-1) unstable; urgency=low

  [ Emilien Klein ]
  * Initial release (Closes: #654814 and #709644)

  [ Georges Khaznadar ]
  * Updated Maintainer: and Uploaders: fields in d/control

 -- Emilien Klein <emilien+debian@klein.st>  Sun, 26 May 2013 22:36:57 +0200