@@ -1,7 +1,7 @@
 No need to check if Shaarli can write in its own directory, since all data/cache/etc. are placed in dedicated folders for this Debian package.
 --- a/index.php
 +++ b/index.php
-@@ -78,7 +78,6 @@
+@@ -78,12 +78,9 @@
  header("Pragma: no-cache");
  
  // Directories creations (Note that your web host may require differents rights than 705.)
@@ -9,3 +9,8 @@ No need to check if Shaarli can write in its own directory, since all data/cache
  if (!is_dir($GLOBALS['config']['DATADIR'])) { mkdir($GLOBALS['config']['DATADIR'],0705); chmod($GLOBALS['config']['DATADIR'],0705); }
  if (!is_dir(raintpl::$cache_dir)) { mkdir(raintpl::$cache_dir,0705); chmod(raintpl::$cache_dir,0705); } // For RainTPL temporary files.
  if (!is_file($GLOBALS['config']['DATADIR'].'/.htaccess')) { file_put_contents($GLOBALS['config']['DATADIR'].'/.htaccess',"Allow from none\nDeny from all\n"); } // Protect data files.
+-// Second check to see if Shaarli can write in its directory, because on some hosts is_writable() is not reliable.
+-if (!is_file($GLOBALS['config']['DATADIR'].'/.htaccess')) die('<pre>ERROR: Shaarli does not have the right to write in its own directory ('.realpath(dirname(__FILE__)).').</pre>');
+ if ($GLOBALS['config']['ENABLE_LOCALCACHE'])
+ {
+     if (!is_dir($GLOBALS['config']['CACHEDIR'])) { mkdir($GLOBALS['config']['CACHEDIR'],0705); chmod($GLOBALS['config']['CACHEDIR'],0705); }
